# seismoai-io

./: README.md  pyproject.toml  test_real_data.py
seismoai_io/: __init__.py  io.py
seismoai_io.egg-info/: SOURCES.txt  top_level.txt
tests/: test_io.py
