[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seismoai-io"
version = "0.1.0"
description = "SGY file loader for seismic data — part of seismoai"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/Kiran/seismoai-io"